# hinode-iris-2025-astropy-modeling

./: .gitattributes  .gitignore  export.sh  org.css  pyproject.toml  talk.org
.github/workflows/: pages.yml
demo/: solo_L2_spice-n-ras_20220402T031537_V22_100663994-000.fits  spice_big_data.md
